--- a/chap-bunching.qmd
+++ b/chap-bunching.qmd
@@ -65,7 +65,7 @@ The following settings enable you to expand the report with additional output, s
 
 ### Advanced
 
-The following advanced settings allow you to customize the statistical computations according to your preferences.
+The following advanced settings enable you to customize the statistical computations according to your preferences.
 
 ![](img/bunching/bunching-10.png){fig-align="center" width=75%}
 
